# pycraf-gui

./: MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
pycraf_gui/: __init__.py  conftest.py
pycraf_gui/gui/: gui.py  plot_widget.py
pycraf_gui/gui/tests/: test_gui.py
