[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
filterwarnings = ignore::pytest.PytestUnknownMarkWarning
addopts = -p no:warnings
doctest_optionflags =
    NORMALIZE_WHITESPACE
    ELLIPSIS
    FLOAT_CMP

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
description-file = README.rst
package_name = pycraf-gui
description = pycraf-gui: simple gui for pycraf path attenuation calculation long_description = Pycraf-GUI is a simple user interface for pycraf, which can be calculate path propagation loss based on Rec. ITU-R P.452.
author = Benjamin Winkel
author_email = bwinkel@mpifr.de
license = GNU GPL v3+
url = https://github.com/bwinkel/pycraf-gui
edit_on_github = True
github_project = bwinkel/pycraf-gui
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy, numpy, pycraf
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.7
project_urls =
    Bug Tracker = https://github.com/bwinkel/pycraf-gui/issues
    Documentation = https://bwinkel.github.io/pycraf/
    Source Code = https://github.com/bwinkel/pycraf-gui
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy

[entry_points_gui]
pycraf-gui = pycraf_gui.gui.__main__:main
